Update custom resources tags

--- a/stacks/custom-resources.yml
+++ b/stacks/custom-resources.yml
@@ -52,10 +52,11 @@ Resources:
       MemorySize: 128
       Runtime: python3.8
       Tags:
-        Project: Infrastructure
-        Environment: !Ref EnvironmentType
+        prx:meta:tagging-version: "2021-04-07"
         prx:cloudformation:stack-name: !Ref AWS::StackName
         prx:cloudformation:stack-id: !Ref AWS::StackId
+        prx:ops:environment: !Ref EnvironmentType
+        prx:dev:application: Infrastructure
       Timeout: 4
   AmazonSesSmtpCredentialsGeneratorFunctionLogGroup:
     Type: AWS::Logs::LogGroup
@@ -151,10 +152,11 @@ Resources:
                 - !Join ["", ["arn:aws:s3:::", "Fn::ImportValue": !Sub "${StorageStackName}-InfrastructureApplicationCodeBucket", "/*"]]
       Runtime: python3.8
       Tags:
-        Project: Infrastructure
-        Environment: !Ref EnvironmentType
+        prx:meta:tagging-version: "2021-04-07"
         prx:cloudformation:stack-name: !Ref AWS::StackName
         prx:cloudformation:stack-id: !Ref AWS::StackId
+        prx:ops:environment: !Ref EnvironmentType
+        prx:dev:application: Infrastructure
       Timeout: 60
   S3StaticSiteDeployFunctionLogGroup:
     Type: AWS::Logs::LogGroup
@@ -218,10 +220,11 @@ Resources:
               Resource: "*"
       Runtime: python3.8
       Tags:
-        Project: Infrastructure
-        Environment: !Ref EnvironmentType
+        prx:meta:tagging-version: "2021-04-07"
         prx:cloudformation:stack-name: !Ref AWS::StackName
         prx:cloudformation:stack-id: !Ref AWS::StackId
+        prx:ops:environment: !Ref EnvironmentType
+        prx:dev:application: Infrastructure
       Timeout: 60
   AvailabilityZoneSelectorFunctionLogGroup:
     Type: AWS::Logs::LogGroup
@@ -258,10 +261,11 @@ Resources:
       MemorySize: 128
       Runtime: python3.8
       Tags:
-        Project: Infrastructure
-        Environment: !Ref EnvironmentType
+        prx:meta:tagging-version: "2021-04-07"
         prx:cloudformation:stack-name: !Ref AWS::StackName
         prx:cloudformation:stack-id: !Ref AWS::StackId
+        prx:ops:environment: !Ref EnvironmentType
+        prx:dev:application: Infrastructure
       Timeout: 4
   EchoFunctionLogGroup:
     Type: AWS::Logs::LogGroup
