--- a/stacks/shared-ecs-asg.yml
+++ b/stacks/shared-ecs-asg.yml
@@ -60,14 +60,11 @@ Resources:
                 Resource: "*"
             Version: "2012-10-17"
       Tags:
-        - Key: Project
-          Value: platform.prx.org
-        - Key: Environment
-          Value: !Ref EnvironmentType
-        - Key: prx:cloudformation:stack-name
-          Value: !Ref AWS::StackName
-        - Key: prx:cloudformation:stack-id
-          Value: !Ref AWS::StackId
+        - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
+        - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
+        - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
+        - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
+        - { Key: prx:dev:application, Value: Common }
 
   InboundSshTrafficSecurityGroup:
     Type: AWS::EC2::SecurityGroup
@@ -85,16 +82,12 @@ Resources:
           IpProtocol: tcp
           ToPort: 22
       Tags:
-        - Key: Project
-          Value: platform.prx.org # TODO
-        - Key: Environment
-          Value: !Ref EnvironmentType
-        - Key: Name
-          Value: !Sub ${RootStackName}_shared-asg_instance-ssh
-        - Key: prx:cloudformation:stack-name
-          Value: !Ref AWS::StackName
-        - Key: prx:cloudformation:stack-id
-          Value: !Ref AWS::StackId
+        - { Key: Name, Value: !Sub "${RootStackName}_shared-asg_instance-ssh" }
+        - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
+        - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
+        - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
+        - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
+        - { Key: prx:dev:application, Value: Common }
 
   OutboundTrafficSecurityGroup:
     Type: AWS::EC2::SecurityGroup
@@ -108,16 +101,12 @@ Resources:
         - CidrIpv6: ::/0
           IpProtocol: "-1"
       Tags:
-        - Key: Project
-          Value: platform.prx.org
-        - Key: Environment
-          Value: !Ref EnvironmentType
-        - Key: Name
-          Value: !Sub ${RootStackName}_shared-asg_instance-outbound
-        - Key: prx:cloudformation:stack-name
-          Value: !Ref AWS::StackName
-        - Key: prx:cloudformation:stack-id
-          Value: !Ref AWS::StackId
+        - { Key: Name, Value: !Sub "${RootStackName}_shared-asg_instance-outbound" }
+        - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
+        - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
+        - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
+        - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
+        - { Key: prx:dev:application, Value: Common }
 
   # If the logical ID of this resource changes, it needs to be changed in the
   # user data and metadata as well
@@ -283,21 +272,12 @@ Resources:
       NewInstancesProtectedFromScaleIn: true
       # TODO NotificationConfigurations
       Tags:
-        - Key: Project
-          Value: platform.prx.org # TODO
-          PropagateAtLaunch: true
-        - Key: Environment
-          Value: !Ref EnvironmentType
-          PropagateAtLaunch: true
-        - Key: Name
-          Value: !Sub ${RootStackName}_shared-asg
-          PropagateAtLaunch: true
-        - Key: prx:cloudformation:stack-name
-          Value: !Ref AWS::StackName
-          PropagateAtLaunch: true
-        - Key: prx:cloudformation:stack-id
-          Value: !Ref AWS::StackId
-          PropagateAtLaunch: true
+        - { PropagateAtLaunch: true, Key: Name, Value: !Sub "${RootStackName}_shared-asg" }
+        - { PropagateAtLaunch: true, Key: prx:meta:tagging-version, Value: "2021-04-07" }
+        - { PropagateAtLaunch: true, Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
+        - { PropagateAtLaunch: true, Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
+        - { PropagateAtLaunch: true, Key: prx:ops:environment, Value: !Ref EnvironmentType }
+        - { PropagateAtLaunch: true, Key: prx:dev:application, Value: Common }
       # TODO TerminationPolicies
       VPCZoneIdentifier:
         - !Ref VpcPublicSubnet1Id
@@ -319,14 +299,11 @@ Resources:
             - 100
         ManagedTerminationProtection: ENABLED
       Tags:
-        - Key: Project
-          Value: platform.prx.org # TODO
-        - Key: Environment
-          Value: !Ref EnvironmentType
-        - Key: prx:cloudformation:stack-name
-          Value: !Ref AWS::StackName
-        - Key: prx:cloudformation:stack-id
-          Value: !Ref AWS::StackId
+        - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
+        - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
+        - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
+        - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
+        - { Key: prx:dev:application, Value: Common }
   ClusterCapacityProviderAssociation:
     Type: AWS::ECS::ClusterCapacityProviderAssociations
     Properties:
