--- a/stacks/shared-vpc.yml
+++ b/stacks/shared-vpc.yml
@@ -34,16 +34,12 @@ Resources:
       EnableDnsHostnames: true
       InstanceTenancy: default
       Tags:
-        - Key: Project
-          Value: platform.prx.org
-        - Key: Environment
-          Value: !Ref EnvironmentType
-        - Key: Name
-          Value: !Sub ${RootStackName}_shared
-        - Key: prx:cloudformation:stack-name
-          Value: !Ref AWS::StackName
-        - Key: prx:cloudformation:stack-id
-          Value: !Ref AWS::StackId
+        - { Key: Name, Value: !Sub "${RootStackName}_shared" }
+        - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
+        - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
+        - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
+        - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
+        - { Key: prx:dev:application, Value: Common }
   IPv6VpcCidrBlock:
     Type: AWS::EC2::VPCCidrBlock
     DeletionPolicy: Retain
@@ -60,16 +56,12 @@ Resources:
       DomainNameServers:
         - AmazonProvidedDNS
       Tags:
-        - Key: Project
-          Value: platform.prx.org
-        - Key: Environment
-          Value: !Ref EnvironmentType
-        - Key: Name
-          Value: !Sub ${RootStackName}_shared
-        - Key: prx:cloudformation:stack-name
-          Value: !Ref AWS::StackName
-        - Key: prx:cloudformation:stack-id
-          Value: !Ref AWS::StackId
+        - { Key: Name, Value: !Sub "${RootStackName}_shared" }
+        - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
+        - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
+        - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
+        - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
+        - { Key: prx:dev:application, Value: Common }
   DhcpOptionsAssociation:
     Type: AWS::EC2::VPCDHCPOptionsAssociation
     Properties:
@@ -87,12 +79,11 @@ Resources:
         RootStackName: !Ref RootStackName
         VpcId: !Ref Vpc
       Tags:
-        - Key: Environment
-          Value: !Ref EnvironmentType
-        - Key: prx:cloudformation:stack-name
-          Value: !Ref AWS::StackName
-        - Key: prx:cloudformation:stack-id
-          Value: !Ref AWS::StackId
+        - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
+        - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
+        - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
+        - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
+        - { Key: prx:dev:application, Value: Common }
       TemplateURL: !Sub ${TemplateUrlPrefix}/public-network-acl.yml
       TimeoutInMinutes: 5
   PrivateNetworkAclStack:
@@ -108,12 +99,11 @@ Resources:
         VpcCidrBlock: !GetAtt Vpc.CidrBlock
         VpcIpv6CidrBlocks: !Join [",", !GetAtt Vpc.Ipv6CidrBlocks]
       Tags:
-        - Key: Environment
-          Value: !Ref EnvironmentType
-        - Key: prx:cloudformation:stack-name
-          Value: !Ref AWS::StackName
-        - Key: prx:cloudformation:stack-id
-          Value: !Ref AWS::StackId
+        - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
+        - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
+        - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
+        - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
+        - { Key: prx:dev:application, Value: Common }
       TemplateURL: !Sub ${TemplateUrlPrefix}/private-network-acl.yml
       TimeoutInMinutes: 5
 
@@ -133,12 +123,11 @@ Resources:
         AvailabilityZoneSelectorServiceToken: !Ref AvailabilityZoneSelectorServiceToken
         NetworkAclName: !GetAtt PublicNetworkAclStack.Outputs.NetworkAclName
       Tags:
-        - Key: Environment
-          Value: !Ref EnvironmentType
-        - Key: prx:cloudformation:stack-name
-          Value: !Ref AWS::StackName
-        - Key: prx:cloudformation:stack-id
-          Value: !Ref AWS::StackId
+        - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
+        - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
+        - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
+        - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
+        - { Key: prx:dev:application, Value: Common }
       TemplateURL: !Sub ${TemplateUrlPrefix}/public-subnets.yml
       TimeoutInMinutes: 5
   PrivateSubnetsStack:
@@ -156,12 +145,11 @@ Resources:
         AvailabilityZoneSelectorServiceToken: !Ref AvailabilityZoneSelectorServiceToken
         NetworkAclName: !GetAtt PrivateNetworkAclStack.Outputs.NetworkAclName
       Tags:
-        - Key: Environment
-          Value: !Ref EnvironmentType
-        - Key: prx:cloudformation:stack-name
-          Value: !Ref AWS::StackName
-        - Key: prx:cloudformation:stack-id
-          Value: !Ref AWS::StackId
+        - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
+        - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
+        - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
+        - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
+        - { Key: prx:dev:application, Value: Common }
       TemplateURL: !Sub ${TemplateUrlPrefix}/private-subnets.yml
       TimeoutInMinutes: 5
 
@@ -179,12 +167,11 @@ Resources:
         PublicSubnet2Id: !GetAtt PublicSubnetsStack.Outputs.Subnet2Id
         PublicSubnet3Id: !GetAtt PublicSubnetsStack.Outputs.Subnet3Id
       Tags:
-        - Key: Environment
-          Value: !Ref EnvironmentType
-        - Key: prx:cloudformation:stack-name
-          Value: !Ref AWS::StackName
-        - Key: prx:cloudformation:stack-id
-          Value: !Ref AWS::StackId
+        - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
+        - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
+        - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
+        - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
+        - { Key: prx:dev:application, Value: Common }
       TemplateURL: !Sub ${TemplateUrlPrefix}/interface-endpoints.yml
       TimeoutInMinutes: 5
   GatewayEndpointsStack:
@@ -197,12 +184,11 @@ Resources:
         PublicRouteTableId: !GetAtt PublicSubnetsStack.Outputs.RouteTableId
         PrivateRouteTableId: !GetAtt PrivateSubnetsStack.Outputs.RouteTableId
       Tags:
-        - Key: Environment
-          Value: !Ref EnvironmentType
-        - Key: prx:cloudformation:stack-name
-          Value: !Ref AWS::StackName
-        - Key: prx:cloudformation:stack-id
-          Value: !Ref AWS::StackId
+        - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
+        - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
+        - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
+        - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
+        - { Key: prx:dev:application, Value: Common }
       TemplateURL: !Sub ${TemplateUrlPrefix}/gateway-endpoints.yml
       TimeoutInMinutes: 5
 
@@ -217,12 +203,11 @@ Resources:
         VpcId: !Ref Vpc
         RootStackName: !Ref RootStackName
       Tags:
-        - Key: Environment
-          Value: !Ref EnvironmentType
-        - Key: prx:cloudformation:stack-name
-          Value: !Ref AWS::StackName
-        - Key: prx:cloudformation:stack-id
-          Value: !Ref AWS::StackId
+        - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
+        - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
+        - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
+        - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
+        - { Key: prx:dev:application, Value: Common }
       TemplateURL: !Sub ${TemplateUrlPrefix}/flow-logs.yml
       TimeoutInMinutes: 5
 
